--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,7 @@
+assets:
+  -lib/images/1.jpg
+  -lib/images/2.png
+  -lib/images/3.jpg
 name: hello_world
 description: A new Flutter project.
 
@@ -20,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   url_launcher: ^3.0.0
+  flutter_webview_plugin: ^0.3.0+2
+  webview_flutter: ^0.2.0
 
 dev_dependencies:
   flutter_test:
